# cg-windows-gh-action

./: .gitignore  CMakeLists.txt  flake.nix
.github/workflows/: build.yml
OpenGLFramework-VS2017/: OpenGLFramework-VS2017.vcxproj  textfile.cpp
include/glad/: glad.h
src/: Matrices.cpp  Matrices.hpp  Vectors.hpp  glad.c  main.cpp  textfile.cpp  textfile.h
